# phylozoo

./: .cursorrules  .gitignore  .instructions  .readthedocs.yml  BEHAVIOR_NOTES_SQPROFILE.md  EDITABLE_INSTALL.md  GITLAB_SETUP.md  IMPORT_STRATEGY.md  LICENSE.md  QUICKSTART.md  README.md  STRUCTURE.md  TODO  doc-manual-setup  plot_layout_example.py  plot_level4_generators.py  plot_parallel_edges_example.py  plot_updated_layout_example.py  prompt.md  pyproject.toml  test.fmt1  test.fmt2  test_two_hybrids.py
.github/: AGENT.md  AGENT_EXAMPLES.md  AGENT_OVERVIEW.md  AGENT_PROJECT_SPECIFICS.md  copilot-instructions.md
.github/workflows/: release.yml
docs/: AGENT_EXAMPLES.md  AGENT_OVERVIEW.md  Makefile  README.md  autobuild.sh  requirements.txt
docs/source/: bibliography.bib  conf.py  index.rst  quickstart.rst
docs/source/api/: core.rst  index.rst  inference.rst  networks.rst  panda.rst  structures.rst  utils.rst  viz.rst
docs/source/api/core/: d_multigraph.rst  distance.rst  dnetwork.rst  (+7 more)
docs/source/develop/: changelog.rst  code_style.rst  contributing.rst  index.rst  structure.rst  testing.rst
docs/source/examples/: advanced_usage.rst  basic_networks.rst  index.rst  sequence_analysis.rst
docs/source/guides/: architecture.rst  code_style.rst  contributing.rst  import_strategy.rst  index.rst  testing.rst
docs/source/manual/: advanced.rst  bibliography.rst  core.rst  core_distance_advanced.rst  core_distance_basic.rst  core_generators.rst  core_networks_advanced.rst  core_networks_basic.rst  core_primitives.rst  core_quartets.rst  core_sequences_advanced.rst  core_sequences_basic.rst  core_splits.rst  diversity.rst  exceptions.rst  index.rst  inference.rst  installation.rst  introduction.rst  io.rst  viz.rst
docs/source/reference/: bibliography.rst  changelog.rst  glossary.rst  index.rst
docs/source/tutorials/: index.rst  inference_pipeline.rst  network_analysis_workflow.rst  quickstart.rst  visualization_guide.rst  workflow_inference.rst  workflow_network_analysis.rst  workflows.rst
examples/: README.md  README_network_examples.md  README_plotting.md  README_pyqtgraph.md  example_basic.py  example_directed_phynetwork.py  layout_examples.py  network_examples.py  plotting_examples.py  pyqtgraph_example.py  pyqtgraph_examples.py  pyqtgraph_simple_example.py  test_network_examples.py  visualize2_comparison.py  visualize2_example.py  visualize2_large_example.py  visualize2_phylo_example.py
scripts/: README.md  example_script.py
src/: README.md
src/phylozoo/: __init__.py  dnetwork.py  invariant_eval.py  load_data.py  msa.py  quarnet.py  quarnetset.py  sdnetwork.py  splits.py  trinet.py  trinetset.py
src/phylozoo/core/: __init__.py  dnetwork.py  partition.py  sdnetwork.py  splits.py
src/phylozoo/diversity/: __init__.py  diversity.py
src/phylozoo/inference/: __init__.py  inference.py
src/phylozoo/invariants/: .gitkeep
src/phylozoo/networks/: __init__.py  directed.py
src/phylozoo/panda/: __init__.py  diversity.py
src/phylozoo/plotting/: __init__.py  network_plot.py
src/phylozoo/squirrel/: __init__.py
src/phylozoo/structures/: __init__.py  circular.py
src/phylozoo/utils/: __init__.py  _config.py  cache.py  circular.py  enewick.py  exceptions.py  identifier_warnings.py  io.py  load_data.py  mixed_graph.py  parallel.py  polynomial.py  polynomial2.py  tools.py  validation.py  validation_old.py
src/phylozoo/visualize/: __init__.py  graph_plot.py  layout.py  network_plot.py  rectangular_layout.py
src/phylozoo/viz/: __init__.py  _dispatch.py  _layout_utils.py  _matplotlib.py  _render.py  _types.py  plot.py
tests/: README.md  __init__.py  conftest.py  test_circular.py  test_networks.py  test_partition.py  test_splits.py  test_utils.py  two_hybrids_profileset_output.txt
tests/core/: __init__.py
tests/core/distance/: __init__.py  test_base.py  test_classifications.py  test_classifications_api.py  test_io.py  test_operations.py
tests/core/network/: __init__.py  test_network.py  test_validation_suppression.py
tests/core/primitives/: __init__.py  test_circular_ordering.py  test_d_multigraph_isomorphism.py  test_dm_graph.py  test_dm_graph_attributes.py  test_dm_identify_parallel.py  test_dm_identify_vertices.py  test_dm_keyword_warnings.py  test_dm_operations_suppress.py  test_dm_transformations_subgraph.py  test_dm_transformations_suppress.py  test_m_multigraph_isomorphism.py  test_mm_graph.py  test_mm_graph_attributes.py  test_mm_graph_orient.py  test_mm_identify_parallel.py  test_mm_identify_vertices.py  test_mm_identify_vertices_bidirectional.py  test_mm_keyword_warnings.py  test_mm_operations_suppress.py  test_mm_transformations_subgraph.py  test_mm_transformations_suppress.py  test_partition.py
tests/core/quartet/: __init__.py  test_profile.py  test_profileset.py  test_qdistance.py  test_quartet.py
tests/core/sequence/: __init__.py  test_bootstrap.py  test_distances.py  test_from_coded_array.py  test_msa.py
tests/core/split/: test_algorithms.py  test_io.py  test_split.py  test_weighted_splitsystem.py
tests/core/structure/: test_directed_multi_graph.py  test_mixed_multi_graph.py  test_split.py
tests/fixtures/: __init__.py  directed_networks.py  sd_networks.py  test_fixture_validity.py
tests/inference/: __init__.py
tests/inference/squirrel/: __init__.py  test_cycle_resolution.py  test_delta_heuristic.py  test_qjoining.py  test_qsimilarity.py  test_sqprofile.py  test_sqprofileset.py  test_squirrel.py  test_tstar_tree.py  test_unresolve_tree.py
tests/io/: __init__.py  test_formats_nexus.py
tests/panda/: __init__.py
tests/panda/measure/: __init__.py  test_all_paths.py  test_base.py  test_protocol.py
tests/panda/utils/: __init__.py  test_scanwidth.py
tests/utils/: __init__.py  test_cache.py  test_enewick.py  test_identifier_warnings.py  test_io.py  test_utils.py  test_validation.py  test_validation_toggle.py
tests/visualize/: __init__.py  test_backends.py  test_layout.py  test_plot.py  test_styling.py
tests/viz/: __init__.py  test_backends.py  test_layout.py  test_plot.py  test_sdnetwork_plot.py  test_styling.py
(+400 files in other folders)
