[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phylozoo"
dynamic = ["version"]
authors = [
    {name = "Niels Holtgrefe", email = "n.a.l.holtgrefe@tudelft.nl"},
]
description = "A phylogenetic networks analysis package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
    "numba>=0.56.0",
    "networkx>=3.0.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5.0",
]
graphviz = [
    "matplotlib>=3.5.0",
    "pygraphviz",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "matplotlib>=3.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "matplotlib>=3.5.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-autobuild>=2023.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "pydata-sphinx-theme>=0.15.0",
    "sphinxcontrib-napoleon>=0.7",
    "sphinx-copybutton>=0.5.0",
    "sphinxcontrib-bibtex>=2.6.0",
    "pybtex>=0.24.0",
    "matplotlib>=3.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "phylozoo.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore:Empty network.*no nodes.*:UserWarning",
    "ignore:Single-node network.*:UserWarning",
    "ignore:Validity is not fully checked for MixedPhyNetworks.*:UserWarning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py310"

